--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@
 
     display: flex;
     flex-direction: column;
+    align-items: center;
 
 }
 
@@ -21,6 +22,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
 
 }
 
@@ -40,10 +42,12 @@
 
 .content-body {
     background-color: gray;
-
-    padding: 6rem 40rem;
+    padding: 2rem 5rem;
+    width: 40%;
     font-size: 20px;
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;    
 }
 
 
@@ -52,11 +56,8 @@
     max-height: 300px;
     width: 100%;
     background-color: red;
-
     display: flex;
-    justify-content: space-around;
-
-    
+    justify-content: space-around;   
   }
 
 
