--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,21 @@
    
 }
 
+@font-face {
+    font-family: "Aboreto";  
+    src: url('./Aboreto-Regular.ttf') format('woff');  
+    font-weight: 600; 
+    font-style: normal;  
+}
+
+@font-face {
+    font-family: "Avro";  
+    src: url('./Arvo-Regular.ttf') format('woff');  
+    font-weight: 400; 
+    font-style: normal;  
+}
+
+  
 #content {
     min-height: 100%;
     position: relative;
@@ -38,16 +53,23 @@
     color: black;
     font-size: 25px;
     font-weight: 400;
+    font-family: 'Aboreto';
 }
+
 
 .content-body {
     background-color: gray;
-    padding: 2rem 5rem;
+    padding: 4rem 5rem;
     width: 40%;
-    font-size: 20px;
+    font-size: 22px;
+    font-family: "Avro";
+    line-height: 1.5;
+    text-align: center;
     display: flex;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;  
+    
+    
 }
 
 
